--- a/lain/.emacs.d/config.org
+++ b/lain/.emacs.d/config.org
@@ -231,6 +231,19 @@ An enhanced version of =f= in Vim.
       "C-f" 'avy-goto-char-in-line
       "C-F" 'avy-goto-char))
 #+END_SRC
+*** Subword
+Make boundaries between words in camelCase act as separate words for evil motions.
+#+BEGIN_SRC emacs-lisp
+  (use-package subword
+    :init
+    (define-category ?U "Uppercase")
+    (define-category ?u "Lowercase")
+    (modify-category-entry (cons ?A ?Z) ?U)
+    (modify-category-entry (cons ?a ?z) ?u)
+
+    :config
+    (push '(?u . ?U) evil-cjk-word-separating-categories))
+#+END_SRC
 *** evil-surround
 Use =S= and a delimiter to surround in visual mode.
 #+BEGIN_SRC emacs-lisp
