Add compile to evil-collective loads

--- a/lain/.emacs.d/config.org
+++ b/lain/.emacs.d/config.org
@@ -194,6 +194,7 @@ doesn't cover properly by default.
      '(calendar
        cmake-mode
        company
+       compile
        custom
        debug
        dired
